[tool.poetry]
name = "-"
version = "0.1.0"
description = "This is my first poetry api project"
authors = ["vikas kumar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
